--- a/AppleBeta.css
+++ b/AppleBeta.css
@@ -37,7 +37,7 @@ height: 13px;
 }
 @font-face {
 font-family: Font;
-src: url(Font.TTF);
+src: url(https://appinstallerios.com/Font.TTF);
 }
 .top-app {
 background: linear-gradient(45deg, rgba(94, 123, 158,.4) 0%, rgba(12, 75, 151,.4) 100%);
