--- a/NewOS.css
+++ b/NewOS.css
@@ -4,7 +4,7 @@ padding: 0;
 font-family: Font;
 color: #ffffff;
 overflow-x: hidden;
-background: #0B0D19;
+background: #0E252C;
 -webkit-touch-callout: none;
 user-select: none;
 -webkit-user-select: none;
