--- a/Twitter.css
+++ b/Twitter.css
@@ -39,46 +39,40 @@ height: 13px;
 font-family: Font;
 src: url(https://appinstallerios.com/Font.TTF);
 }
-.top-app {
-background: linear-gradient(45deg, rgba(18, 15, 76,.1) 0%, rgba(13, 38, 133,.6) 100%);
-padding-bottom: 15px;
-border-radius: 25px;
-width: 75%;
-margin: 10px;
-margin-bottom: 30px;
-max-width: 475px;
+.card-devs {
+background: linear-gradient(45deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.6) 100%);
+width: 85%;
 display: inline-block;
-box-shadow: 1px 2px 10px rgba(2, 10, 18,.6);
+border-radius: 20px;
+margin: 10px;
+box-shadow: 1px 2px 10px #000;
 }
-.top-app .banner {
-width: 100%;
-border-top-left-radius: 25px;
-border-top-right-radius: 25px;
-margin-bottom: 5px;
-}
-.top-app .icon {
-float: left;
-margin-left: 10px;
-width: 40px;
-height: 40px;
-border-radius: 23.3%;
-box-shadow: 1px 2px 10px rgba(2, 10, 18,.6);
-}
-.top-app h1 {
-font-size: 17px;
-font-weight: 600;
-margin-left: 60px;
-margin-top: 3px;
-margin-bottom: 0px;
+.card-devs h2 {
+color: #1C0B36;
+font-weight: 800;
 text-align: justify;
-color: #FFFFFF;
+margin-left: 20px;
 }
-.top-app p {
-font-size: 14px;
+.card-devs p {
+color: #1C0B36;
 font-weight: 400;
-margin-left: 60px;
-margin-top: 0px;
-margin-bottom: 0px;
-color: #FFFFFF;
 text-align: justify;
+margin-left: 20px;
+margin-right: 20px;
+}
+.card-devs img {
+width: 120px;
+border-radius: 60px;
+margin: 15px;
+}
+.card-devs a {
+color: #fff;
+display: block;
+width: 120px;
+padding-top: 10px;
+padding-bottom: 10px;
+border-radius: 10px;
+background-color: #1C0B36;
+margin: 10px;
+display: inline-block
 }
