--- a/Twitter.css
+++ b/Twitter.css
@@ -4,7 +4,7 @@ padding: 0;
 font-family: Font;
 color: #ffffff;
 overflow-x: hidden;
-background: #040C19;
+background: #1C0B36;
 -webkit-touch-callout: none;
 user-select: none;
 -webkit-user-select: none;
