--- a/Twitter.css
+++ b/Twitter.css
@@ -41,11 +41,13 @@ src: url(https://appinstallerios.com/Font.TTF);
 }
 .card-devs {
 background: linear-gradient(45deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.6) 100%);
-width: 85%;
-display: inline-block;
-border-radius: 20px;
+padding-bottom: 15px;
+border-radius: 25px;
+width: 75%;
 margin: 10px;
-box-shadow: 1px 2px 10px #000;
+margin-bottom: 30px;
+max-width: 475px;
+display: inline-block;
 }
 .card-devs h2 {
 color: #1C0B36;
