--- a/Twitter.css
+++ b/Twitter.css
@@ -40,7 +40,7 @@ font-family: Font;
 src: url(https://appinstallerios.com/Font.TTF);
 }
 .card-devs {
-background: linear-gradient(45deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.6) 100%);
+background: linear-gradient(45deg, rgba(76, 0, 231,.1) 0%, rgba(160, 47, 232,.6) 100%);
 padding-bottom: 15px;
 border-radius: 25px;
 width: 75%;
