--- a/Twitter.css
+++ b/Twitter.css
@@ -2,7 +2,7 @@ body {
 margin: 0px;
 padding: 0;
 font-family: Font;
-color: #ffffff;
+color: #e8effa;
 overflow-x: hidden;
 background: #1C0B36;
 -webkit-touch-callout: none;
@@ -50,13 +50,13 @@ max-width: 475px;
 display: inline-block;
 }
 .card-devs h1 {
-color: #1C0B36;
+color: #e8effa;
 font-weight: 800;
 text-align: justify;
 margin-left: 20px;
 }
 .card-devs p {
-color: #1C0B36;
+color: #e8effa;
 font-weight: 400;
 text-align: justify;
 margin-left: 20px;
@@ -74,7 +74,7 @@ width: 120px;
 padding-top: 10px;
 padding-bottom: 10px;
 border-radius: 10px;
-background-color: #1C0B36;
+background-color: #e8effa;
 margin: 10px;
 display: inline-block
 }
