--- a/Twitter.css
+++ b/Twitter.css
@@ -73,8 +73,8 @@ display: block;
 width: 120px;
 padding-top: 10px;
 padding-bottom: 10px;
-border-radius: 10px;
-background-color: #e8effa;
+border-radius: 50px;
+background-color: #1C0B36;
 margin: 10px;
 display: inline-block
 }
