--- a/Twitter.css
+++ b/Twitter.css
@@ -68,7 +68,7 @@ border-radius: 60px;
 margin: 15px;
 }
 .card-devs a {
-color: #fff;
+color: #e8effa;
 display: block;
 width: 120px;
 padding-top: 10px;
