--- a/Twitter.css
+++ b/Twitter.css
@@ -63,8 +63,9 @@ margin-left: 20px;
 margin-right: 20px;
 }
 .card-devs img {
-width: 120px;
-border-radius: 60px;
+width: 40px;
+height: 40px;
+border-radius: 23.3%;
 margin: 15px;
 }
 .card-devs a {
