--- a/AppleBeta.css
+++ b/AppleBeta.css
@@ -4,7 +4,7 @@ padding: 0;
 font-family: Font;
 color: #ffffff;
 overflow-x: hidden;
-background: #2A64B8;
+background: #fff;
 -webkit-touch-callout: none;
 user-select: none;
 -webkit-user-select: none;
