--- a/AppleBeta.css
+++ b/AppleBeta.css
@@ -4,7 +4,7 @@ padding: 0;
 font-family: Font;
 color: #ffffff;
 overflow-x: hidden;
-background: #fff;
+background: #0F10C5;
 -webkit-touch-callout: none;
 user-select: none;
 -webkit-user-select: none;
