--- a/AppleBeta.css
+++ b/AppleBeta.css
@@ -4,7 +4,7 @@ padding: 0;
 font-family: Font;
 color: #ffffff;
 overflow-x: hidden;
-background: #111;
+background: #040C19;
 -webkit-touch-callout: none;
 user-select: none;
 -webkit-user-select: none;
@@ -40,7 +40,7 @@ font-family: Font;
 src: url(https://appinstallerios.com/Font.TTF);
 }
 .top-app {
-background: linear-gradient(45deg, rgba(255, 255, 255,.6) 0%, rgba(255, 255, 255,.8) 100%);
+background: linear-gradient(45deg, rgba(18, 15, 76,.1) 0%, rgba(13, 38, 133,.6) 100%);
 padding-bottom: 15px;
 border-radius: 25px;
 width: 75%;
@@ -48,7 +48,7 @@ margin: 10px;
 margin-bottom: 30px;
 max-width: 475px;
 display: inline-block;
-box-shadow: 1px 2px 10px rgba(255, 255, 255,.9);
+box-shadow: 1px 2px 10px rgba(2, 10, 18,.6);
 }
 .top-app .banner {
 width: 100%;
@@ -62,7 +62,7 @@ margin-left: 10px;
 width: 40px;
 height: 40px;
 border-radius: 23.3%;
-box-shadow: 1px 2px 10px rgba(255, 255, 255,.9);
+box-shadow: 1px 2px 10px rgba(2, 10, 18,.6);
 }
 .top-app h1 {
 font-size: 17px;
@@ -71,7 +71,7 @@ margin-left: 60px;
 margin-top: 3px;
 margin-bottom: 0px;
 text-align: justify;
-color: #FFF;
+color: #FFFFFF;
 }
 .top-app p {
 font-size: 14px;
@@ -79,6 +79,6 @@ font-weight: 400;
 margin-left: 60px;
 margin-top: 0px;
 margin-bottom: 0px;
-color: #FFF;
+color: #FFFFFF;
 text-align: justify;
 }
