--- a/AppleNews.css
+++ b/AppleNews.css
@@ -4,7 +4,7 @@ padding: 0;
 font-family: Font;
 color: #ffffff;
 overflow-x: hidden;
-background: #040C19;
+background: linear-gradient(45deg, rgba(18, 15, 76,.1) 0%, rgba(13, 38, 133,.6) 100%);
 -webkit-touch-callout: none;
 user-select: none;
 -webkit-user-select: none;
