--- a/AppleNews.css
+++ b/AppleNews.css
@@ -4,8 +4,7 @@ padding: 0;
 font-family: Font;
 color: #ffffff;
 overflow-x: hidden;
-background: linear-gradient(45deg, rgba(18, 15, 76,.1) 100%, rgba(13, 38, 133,.6) 100%);
-background-repeat: no-repeat;
+background-image: linear-gradient(45deg, #A02FE8, #4C00E7);
 -webkit-touch-callout: none;
 user-select: none;
 -webkit-user-select: none;
