--- a/AppleNews.css
+++ b/AppleNews.css
@@ -4,8 +4,7 @@ padding: 0;
 font-family: Font;
 color: #ffffff;
 overflow-x: hidden;
-background-image: linear-gradient(45deg, #A02FE8, #4C00E7);
-background-repeat: no-repeat;
+background-image: linear-gradient(to right, #A02FE8, #4C00E7);
 -webkit-touch-callout: none;
 user-select: none;
 -webkit-user-select: none;
