--- a/AppleNews.css
+++ b/AppleNews.css
@@ -4,7 +4,7 @@ padding: 0;
 font-family: Font;
 color: #ffffff;
 overflow-x: hidden;
-background-image: linear-gradient(to right, #0F0279, #6D5BED);
+background-image: linear-gradient(to right, #6D5BED, #0F0279);
 -webkit-touch-callout: none;
 user-select: none;
 -webkit-user-select: none;
